# gemm

./: .gitignore  AGENTS.md  CLAUDE.md  DS4P_DECODE_PERF_FINDINGS.md  README.md  SESSION_REPORT_int8fix.md  VLM_LLM.md  config.json  interactive-1.sh  llama_stderr.txt  modelopt_fp4_repack.py  nunchaku_dump_reference.py  nunchaku_fp4_repack.py  nunchaku_fp4_repack_omma.py  profile.sqlite  qwen-image.md  remote.md  resume-opt.md  resume.md  run.sh  run_pipe_cmp.sh  svdquant.md  task-rdna4.md  task.md  trellis2-assets.md
cpu/: CMakeLists.txt  configure_cross_a64fx.sh  toolchain-a64fx-cross.cmake
cpu/da3/: CMakeLists.txt  Makefile  test_da3.c
cpu/dinov3/: CMakeLists.txt  Makefile  test_dinov3.c  verify_dinov3.py
cpu/flux2/: CMakeLists.txt  Makefile  test_flux2.c
cpu/hy3d/: CMakeLists.txt  test_hy3d.c
cpu/llm/: CMakeLists.txt  Makefile  launch.sh  test_transformer.c  test_transformer_parallel.c
cpu/ppd/: CMakeLists.txt  Makefile  test_ppd.c
cpu/qwen_image/: CMakeLists.txt  Makefile  inspect_gguf.py  inspect_text_encoder.py  inspect_vae.py  test_qwen_image.c  verify_qwen_image.py
cpu/sam3/: Makefile  README.md  sam3_clip_bpe.c  sam3_clip_bpe.h  sam3_runner.c  sam3_runner.h  test_sam3.c  verify_bpe.c  verify_detr.c  verify_detr_dec.c  verify_dot_score.c  verify_final.c  verify_fpn.c  verify_mask.c  verify_patch_embed.c  verify_text.c  verify_vit.c
cpu/sam3d/: Makefile  PORT.md  convert_ckpt.py  inspect_ckpt.py  sam3d_runner.c  sam3d_runner.h  test_sam3d.c  verify_cond_fuser.c  verify_dinov2.c  verify_flow_solver.c  verify_npy.h  verify_slat_dit.c  verify_slat_gs.c  verify_ss_decoder.c  verify_ss_dit.c
cpu/sam3d_body/: MHR_PORT.md  Makefile  PORT.md  PORT_v2.md  convert_ckpt.py  inspect_ckpt.py  sam3d_body_runner.c  sam3d_body_runner.h  test_sam3d_body.c  verify_camera_project.c  verify_decoder.c  verify_decoder_e2e.c  verify_decoder_forward.c  verify_decoder_full.c  verify_decoder_layer.c  verify_dense_pe.c  verify_dinov3.c  verify_end_to_end.c  verify_kp_update.c  verify_mhr.c  verify_mhr_head.c  verify_mhr_head_decode.c  verify_mhr_stages.c  verify_preprocess_image.c  verify_ray_cond.c  verify_ray_cond_xyz.c  verify_rt_detr_backbone.c  verify_rt_detr_decoder.c  verify_rt_detr_e2e.c  verify_rt_detr_encoder.c  verify_rt_detr_postprocess.c  verify_rt_detr_preprocess.c  verify_tokens.c  verify_vith.c  verify_warp_matrix.c
cpu/sparse3d/: CMakeLists.txt  Makefile  test_sparse3d.c  verify_sparse3d.py
cpu/svdquant/: Makefile  README.md  svdquant_cpu.h  test_svdquant.c
cpu/trellis2/: CMakeLists.txt  Makefile  README.md  compare_per_block.py  cpu_trellis2_runner.c  cpu_trellis2_runner.h  debug_stage2_block0.py  dump_block0_detail.py  dump_per_block.py  dump_per_block_synth.py  gen_stage2_ref.py  quantize_dit_fp8.py  quantize_slat_dit_int8.py  quantize_tex_dit_int8.py  run_official_e2e.py  run_pytorch_ref.py  run_stage2_ref.py  run_stage3_tex_ref.py  test_shape_dec.c  test_shape_dec_dump.c  test_tex_dec.c  test_trellis2.c  verify_decoder.py  verify_slat_dit.c  verify_trellis2.py
cpu/turboquant/: CMakeLists.txt  Makefile  test_turboquant_cpu.c  turboquant_cpu.c  turboquant_cpu.h  turboquant_cpu_internal.h  turboquant_cpu_x86.c
cpu/vlm/: CMakeLists.txt  Makefile  test_gemma4_vision.c  test_vision.c
cuda/trellis2/: Makefile  chair_e2e_occ.npy  compare_dumps.py  cuda_step1_latent.npy  cuda_step1_nocfg.npy  cuda_teapot_latent.npy  cuda_teapot_matched_latent.npy  cuda_trellis2_kernels.h  cuda_trellis2_ops.h  cuda_trellis2_runner.c  cuda_trellis2_runner.h  dump_ground_truth.py  dump_texgen.py  gen_image_to_3d.py  pyproject.toml  resume.md  run_dump_ground_truth.sh  run_dump_texgen.sh  run_image_to_3d.sh  run_stage2_ref.sh  setup_cuda.sh  stage1_check.npy  stage1_check2.npy  stage1_recheck.npy  teapot_e2e_occ.npy  teapot_final2_latent.npy  teapot_fixed_latent.npy  teapot_nocfg12_latent.npy  teapot_nocfg12_v2.npy  teapot_norescale_latent.npy  teapot_verified_latent.npy  teapot_verified_occ.npy  test_cuda_trellis2  test_cuda_trellis2.c  verify_decoder  verify_decoder.c  verify_dinov3  verify_dinov3.c  verify_shape_decoder.c  verify_stage1.c  (+5 more)
rdna4/qimg/: .venv  ATTENTION_FUSION_RESEARCH.md  CUDA_PARITY_FINDINGS.md  INT4_W4A16_STATUS.md  Makefile  README.native-fp8.md  hip_qimg_kernels.h  hip_qimg_runner.c  hip_qimg_runner.h  img_cat_512.ppm  img_fp8.ppm  img_fp8_1024.ppm  img_fp8_512.ppm  img_int4_1.ppm  img_int4_3.ppm  img_int4rtn.ppm  img_int8.ppm  img_mtn_256.ppm  nunchaku.md  pyproject.toml  run_pytorch_fp8xfp8_dit_step_lowmem.sh  run_pytorch_fp8xfp8_qwen_image.sh  run_pytorch_fp8xfp8_selective_probes.sh  test_hip_qimg.c  verify_qimg_dit  verify_qimg_dit.c
rdna4/trellis2/: .gitignore  Makefile  bench_tex_dec_coldwarm.py  build_pbr_cpu_oracle.py  check_tex_dec_nondet.py  cumesh_xatlas_shim.py  flash_attn_sdpa_shim.py  hip_shape_dec_pipeline.c  hip_shape_dec_pipeline.h  hip_tex_dec_kernels.h  hip_trellis2_kernels.h  hip_trellis2_runner.c  hip_trellis2_runner.h  pyproject.toml  rocew.h  test_hip_c2s.c  test_hip_convnext.c  test_hip_nmap.c  test_hip_nmap_conv.c  test_hip_slat_dit.c  test_hip_slat_traj.c  test_hip_sparse_conv.c  test_hip_tex_dec.c  test_hip_tex_dit.c  test_hip_trellis2.c  texgen_sw_rast.py  verify_decoder.c  verify_dit.c
ref/da3/: compare.py  compare_all.py  da3_server.py  pyproject.toml  run_all.sh  run_reference.py  run_reference_giant.py  (+1 more)
server/: CMakeLists.txt  image_chat.md  image_decode.h  run-da3-compare.sh  run-flux2-compare.sh  run-hy3d-compare.sh  run-image-chat.sh  run-llm-compare.sh  run-qwen-compare.sh  run-qwen-ref-bridge.sh  run-sam3-compare.sh  run-sam3.1.sh  run-sam3.sh  run-sam3d-body.sh  run-trellis2-compare.sh  sam3_compare.md  server.c  server_llm.c  server_llm.h  server_sam3.c  server_sam3.h  server_sam3_1_cuda.c  server_sam3_cuda.c  smoke-stdio.sh  smoke.sh  stdio-examples.jsonl
vulkan/: CMakeLists.txt  README.md  stb_impl.c  test_matmul_coopmat.cc  test_vision_encoder.cc  test_vision_multimodal.cc  test_vulkan_llm.cc  vision_cpu_impl.c  vulkan_llm_runner.cc  vulkan_llm_runner.hh  vulkan_vision_encoder.cc  vulkan_vision_encoder.hh
(+2347 files in other folders)
